도커에 PostgreSql 설정 추가

--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,9 @@
-DEBUG = 1
-SECRET_KEY = django-insecure-qk4elyh7aw45+so__v_^pkr_e+#jwyeb@8nd-7^xs89@crh3x^
-DJANGO_ALLOWED_HOSTS = localhost 127.0.0.1 [::1]
+DEBUG=1
+SECRET_KEY=django-insecure-qk4elyh7aw45+so__v_^pkr_e+#jwyeb@8nd-7^xs89@crh3x^
+DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
+SQL_ENGINE=django.db.backends.postgresql
+SQL_DATABASE=do_it_django_dev
+SQL_USER=post_ilc
+SQL_PASSWORD=post_skygfd18
+SQL_HOST=db
+SQL_PORT=5432
