--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,4 +12,19 @@ services:
     env_file:
       - ./.env.dev
 
+    depends_on:
+      - db
+
+  db:
+    image: postgres:12.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=post_ilc
+      - POSTGRES_PASSWORD=post_skygfd18
+      - POSTGRES_DB=do_it_django_dev
+volumes:
+  postgres_data:
+
+
 
