--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,7 +11,7 @@ services:
       - 8000:8000
 
     env_file:
-      - ./.env.prod
+      - ./.env.dev
 
     depends_on:
       - db
@@ -20,8 +20,10 @@ services:
     image: postgres:12.0-alpine
     volumes:
       - postgres_data:/var/lib/postgresql/data/
-    env_file:
-      - ./.env.prod.db
+    environment:
+      - POSTGRES_USER=post_ilc
+      - POSTGRES_PASSWORD=post_skygfd18
+      - POSTGRES_DB=do_it_django_dev
 volumes:
   postgres_data:
 
