--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,6 +4,23 @@ upstream django {
 
 server {
     listen 80;
+    server_name chanwhi.com;
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+}
+
+server {
+
+    listen 443;
+    server_name chanwhi.com;
+
     location / {
         proxy_pass http://django;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -19,4 +36,10 @@ server {
     location /media/ {
         alias /usr/src/app/_media/;
     }
+
+    ssl_certificate /etc/letsencrypt/live/chanwhi.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/chanwhi.com/privkey.pem;
+    include /etc/letsencrypt/options-ssl-nginx.conf;
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem;
+
 }
